kube/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db

spec:
  selector:
    app: db

  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

  type: ClusterIP
